# Ransomware

./: .gitignore  Cargo.toml  README.md  decrypt.txt  private.txt  private_key.pem  public_key.pem
src/: build.rs  main.rs
